default/objects/success__News_Broadcast__c/success__News_Broadcast__c.object-meta.xml
<CustomObject>
    <description>The information that is displayed in a News Broadcast on an Inspire Edition Channel. News Broadcasts can also be scheduled for display on a specific date and time.</description>
    <label>News Broadcast</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Broadcast ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>News Broadcasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>