default/objects/success__News_Broadcast__c/fields/success__Channel__c.field-meta.xml
<CustomField>
    <fullName>success__Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel</label>
    <referenceTo>success__Channel__c</referenceTo>
    <relationshipLabel>News Broadcasts</relationshipLabel>
    <relationshipName>News_Broadcasts</relationshipName>
    <type>Lookup</type>
</CustomField>