default/objects/success__News_Broadcast__c/fields/success__Detail__c.field-meta.xml
<CustomField>
    <fullName>success__Detail__c</fullName>
    <label>Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>