default/objects/success__News_Broadcast__c/fields/success__Header__c.field-meta.xml
<CustomField>
    <fullName>success__Header__c</fullName>
    <label>Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>