default/objects/success__News_Broadcast__c/fields/success__Message_Expiry__c.field-meta.xml
<CustomField>
    <fullName>success__Message_Expiry__c</fullName>
    <label>Message Expiry</label>
    <type>DateTime</type>
</CustomField>