default/objects/success__News_Broadcast__c/fields/success__Scheduled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>success__Scheduled_Date_Time__c</fullName>
    <label>Scheduled Date Time</label>
    <type>DateTime</type>
</CustomField>