default/objects/success__News_Broadcast__c/fields/success__Summary__c.field-meta.xml
<CustomField>
    <fullName>success__Summary__c</fullName>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>